Bug 19281 - [video] after switching to full screen with CTRL+SHIFT+F overlapping black window appears. r=mook,r=aus * Switches video window into fullscreen mode instead of setting up a separate fullscreen window.
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@17193 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/dialogs/videoWin.css
+++ b/app/skin/dialogs/videoWin.css
@@ -55,10 +55,13 @@ spacer {
   background-position:center top;
 }
 
-#video_window:not([hidechrome="true"]) sb-sys-titlebar {
-  visibility:collapse;
-  border:none !important;
-  min-height:0px !important;
+#video_window:not([hidechrome="true"]) sb-sys-titlebar,
+#video_window:not([hidechrome="true"]) .sb-sys-outer-frame-chrome,
+#video_window:not([hidechrome="true"]) .sb-sys-outer-frame-resizer,
+#video_window[fullscreen="true"] sb-sys-titlebar,
+#video_window[fullscreen="true"] .sb-sys-outer-frame-chrome,
+#video_window[fullscreen="true"] .sb-sys-outer-frame-resizer {
+  display: none;
 }
 
 #video_window #video-box {
